# opcsim

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.PVT.md  README.md  api.html  contributing.html  deploy.sh  genindex.html  index.html  installing.html  introduction.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
.github/: docs.yml
.github/workflows/: docs.yml  publish-to-pypi.yml  release.yml  test-and-verify.yml
_downloads/: build_your_own_distribution.py  opc_with_dist.py  opc_with_dist_number_and_vol.py
_downloads/84f7b6d52b860a99a8b3205d173df63d/: cumulative_mass.py
_downloads/94ef2a9c185ef8f1353c0b20f762abe2/: hygroscopic_growth_pdf.py
_downloads/bbd3c73ad654cc3dcce8dce2a4d1427b/: volume_mass_comparison.py
_downloads/d2558b9980af2955d0652564d30bd916/: ten_bin_opc.py
_downloads/ee9c7c89378e7a8a9fff4e6c161bcfe3/: opc_with_dist_number_and_vol.py
_modules/: index.html
_modules/opcsim/: distributions.html  metrics.html  models.html  plots.html  utils.html  viz.html
_sources/: api.rst.txt  index.rst.txt  installing.rst.txt  tutorial.rst.txt
_sources/examples/: build_your_own_distribution.rst.txt  cumulative_mass.rst.txt  example_example.rst.txt  hygroscopic_growth_pdf.rst.txt  index.rst.txt  opc_with_dist.rst.txt  three_weights.rst.txt  urban_distribution_pdf.rst.txt
_sources/tutorial/: aerosol_distributions.rst.txt  distribution.rst.txt  model.rst.txt  nephelometer.rst.txt  opcs.rst.txt  scoring.rst.txt
_static/: documentation_options.js  style.css
docker/: Dockerfile
docker/examples/: Figure-1.ipynb
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  installing.rst  introduction.ipynb  introduction.rst  tutorial.rst
docs/examples/: build_your_own_distribution.py  build_your_own_distribution.rst  cumulative_mass.py  cumulative_mass.rst  index.rst  opc_with_dist.py  opc_with_dist.rst  plot_efficiency.py  plot_efficiency2.py  plot_efficiency3.rst  plot_efficiency4.rst  ten_bin_opc.py  three_weights.rst  urban_distribution_pdf.py  (+2 more)
examples/: build_your_own_distribution.html  cumulative_mass.html  example_example.html  hygroscopic_growth_pdf.html  index.html  opc_with_dist.html  opc_with_dist.py  opc_with_dist_number_and_vol.html  opc_with_dist_number_and_vol.py  plot_efficiency.html  plot_efficiency.py  ten_bin_opc.html  three_weights.html  three_weights.py  urban_distribution_pdf.html  volume_mass_comparison.html
opcsim/: __init__.py  _version.py  distributions.py  metrics.py  mie.py  models.py  plots.py  rc_style.py  utils.py  viz.py
tests/: test_distributions.py  test_equations.py  test_mie.py  test_models.py  test_opc_model.py  test_plots.py  test_scoring.py  test_utils.py  test_viz.py
tutorial/: aerosol_distributions.html  distribution.html  model.html  nephelometer.html  opcs.html
(+135 files in other folders)
