[tool.poetry]
name =  "opcsim"
version = "1.0.0"
license = "MIT"
description = "OPCSIM: simulating low-cost optical particle counters"
authors = ["David H Hagan <dhagan@mit.edu>", "Jesse H Kroll <jhkroll@mit.edu>"]
maintainers = ["David H Hagan <dhagan@mit.edu>"]
readme = "README.md"
homepage = "https://dhhagan.github.io/opcsim/"
repository = "https://github.com/dhhagan/opcsim"
documentation = "https://dhhagan.github.io/opcsim/"
keywords = ["aerosols", "atmospheric chemistry"]
packages = [
    { include = "opcsim" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
seaborn = "^0.10.1"
numpy = "^1.18.4"
scipy = "^1.4.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
pytest-cov = "^2.9.0"
jupyter = "^1.0.0"
sphinx = "^3.0.3"
pandoc = "^1.0.2"
sphinx-bootstrap-theme = "^0.7.1"
numpydoc = "^0.9.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dhhagan/opcsim/issues"